some better code
