# users/controller.go
@@ -1,13 +1,11 @@
 package users
 
 import (
-	"fmt"
 	"net/http"
-	"strconv"
 
 	"github.com/Yakov-Varnaev/fakebank/config"
-	"github.com/Yakov-Varnaev/fakebank/db"
 	httpErrors "github.com/Yakov-Varnaev/fakebank/errors"
+	pagination "github.com/Yakov-Varnaev/fakebank/utils"
 	"github.com/gin-gonic/gin"
 )
 
@@ -86,84 +84,18 @@ func (ctrl *Controller) Signin(c *gin.Context) {
 //	@Success		200	{object}	User
 //	@Router			/users/{id} [get]
 func (ctrl *Controller) Retrieve(c *gin.Context) {
-	db := db.GetDB()
 	userId := c.Param("id")
-	var user User
-	err := db.QueryRow(
-		`SELECT id, email, first_name, last_name FROM users WHERE users.id = $1 LIMIT 1`,
-		userId,
-	).Scan(&user.ID, &user.Email, &user.FirstName, &user.LastName)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"detal": err.Error()})
+
+	user, err := RetrieveService{ID: userId}.Act()
+	if err := httpErrors.GetHTTPError(err); err != nil {
+		c.JSON(err.Code, gin.H{"detail": err.Message})
 		return
 	}
-	c.JSON(200, user)
+
+	c.JSON(http.StatusOK, user)
 }
 
-// List users godoc
-//
-//	@Summary		List user
-//	@Description	List user
-//	@Tags			users
-//	@Accept			json
-//	@Produce		json
-//	@Param			offset	query		int	false	"Offset"
-//	@Param			limit	query		int	false	"Limit"
-//	@Success		200		{object}	UserPage
-//	@Router			/users [get]
-func (ctrl *Controller) List(c *gin.Context) {
-	db := db.GetDB()
-	offsetStr := c.DefaultQuery("offset", "0")
-	offset, err := strconv.Atoi(offsetStr)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"detail": "Invalid offset"})
-		return
-	}
-
-	limitStr := c.DefaultQuery("limit", "10")
-	limit, err := strconv.Atoi(limitStr)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"detail": "Invalid limit"})
-		return
-	}
-
-	baseQuery := `SELECT id, email, first_name, last_name FROM users`
-	pageQuery := fmt.Sprintf(`%s %s`, baseQuery, `LIMIT $1 OFFSET $2`)
-
-	rows, err := db.Query(
-		pageQuery,
-		limit,
-		offset,
-	)
-
-	result := make([]User, 0)
-	for {
-		ok := rows.Next()
-		if !ok {
-			err = rows.Err()
-			if err != nil {
-				c.JSON(http.StatusBadRequest, gin.H{"detail": err.Error()})
-				return
-			}
-			break
-		}
-		var id, email, firstName, lastName string
-		rows.Scan(&id, &email, &firstName, &lastName)
-		user := User{ID: id, Email: email, FirstName: firstName, LastName: lastName}
-		result = append(result, user)
-	}
-
-	var total int
-	err = db.QueryRow(`SELECT COUNT(*) FROM users`).Scan(&total)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"detail": err.Error()})
-		return
-	}
-
-	c.JSON(http.StatusOK, UserPage{Total: total, Data: result})
-}
-
-// Authenticated endpoint godoc
+// Get current user godoc
 //
 //	@Summary		Authenticated endpoint
 //	@Description	Authenticated endpoint
@@ -176,4 +108,30 @@ func (ctrl *Controller) List(c *gin.Context) {
 func (ctrl *Controller) RetrieveMe(c *gin.Context) {
 	user := c.MustGet("user").(*User)
 	c.JSON(http.StatusOK, user)
+}
+
+// List users godoc
+//
+//	@Summary		List user
+//	@Description	List user
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			offset	query		int	false	"Offset"
+//	@Param			limit	query		int	false	"Limit"
+//	@Success		200		{object} pagination.Page[User]
+//	@Router			/users [get]
+func (ctrl *Controller) List(c *gin.Context) {
+	paginationParams, _ := pagination.FromContext(c)
+
+	query := c.DefaultQuery("query", "")
+
+	page, err := ListingService{Pagination: paginationParams, Query: query}.Act()
+
+	if err := httpErrors.GetHTTPError(err); err != nil {
+		c.JSON(err.Code, gin.H{"detail": err.Message})
+		return
+	}
+
+	c.JSON(http.StatusOK, page)
 }
